removed logo css, fixed buttons on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -69,14 +69,9 @@ p {
 .input__container {
   display: flex;
   align-items: center;
-  width: ;
 }
 
-.task-input {
-  width: 100%;
-}
-
-.task-input input {
+.input-box {
   outline: 0;
   border: 0;
   padding: 1rem 1rem;
@@ -92,34 +87,15 @@ p {
   .input__container {
     width: 100%;
   }
-  .task-input input {
+  .input-box {
     width: 100%;
   }
-  button.add-button {
-    display: none;
-  }
-  button.date-button {
-    padding-left: 3rem;
-    padding-right: 3rem;
-    font-size: 1.8rem;
-  }
-}
 
-.add-logo {
-  cursor: pointer;
-  border: 2px solid transparent;
-  padding: 0.4rem;
-  border-radius: 0.5rem;
-  transition: 0.2s;
-  margin-right: 0.5rem;
-}
-.add-logo:hover {
-  border: 2px solid var(--silver-lake-blue);
-}
-
-.add-logo i {
-  font-size: 2rem;
-  font-weight: 400;
+  button.btn {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-size: 1.6rem;
+  }
 }
 
 .button-container {
